--- a/linkedoffer/register/index.html
+++ b/linkedoffer/register/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="">
+ï»¿<!DOCTYPE html>
+<html lang="zh">
 <head>
-	<title>Ğ½½ğ¼ÆËã</title>
-	<meta name="description" content="Ô¤²âÄãµÄ¼ÛÖµ¡£">
+	<title>å¡«å†™ä¿¡æ¯è·å–å¯†åŒ™</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 	<meta http-equiv="Content-Language" content="zh-cn">
+	<meta name="Description" content="Linkedofferï¼Œè¿æ¥ä½ èº«è¾¹çš„HRè‡´åŠ›äºå‘é’å¹´æä¾›äº’è”ç½‘èŒä¸šæœºä¼šï¼ŒåŸºäºè¿æ¥HRé‚®ç®±çš„ç¤¾äº¤åŒ–æ‹›è˜ã€‚">
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<meta name="robots" content="all">
 	<meta name="author" content="Parizus">
-	<meta name="Copyright" content="Copyright ___ All Rights Reserved.">
+	<meta name="Copyright" content="Copyright linkedoffer All Rights Reserved.">
 	<meta name="MSSmartTagsPreventParsing" content="true">
 	<meta http-equiv="imagetoolbar" content="false">
 	<!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
@@ -16,24 +16,11 @@
 		body{
 			background-color: #2D2D2D;
 			color: white;
-			font-family: "Î¢ÈíÑÅºÚ";
-			font-weight: lighter;
+			/*font-family: "å¾®è½¯é›…é»‘";*/
 		}
-		form{
+		#myform{
 			border-top: 1px solid #575757;	
 			margin-top: 20px;
-		}
-		button{
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-			font-family: "Î¢ÈíÑÅºÚ";
-		}
-		h4{
-			font-weight: normal;
-			text-align: center;
-			margin-top: 10px;
-			margin-bottom: 10px;
 		}
 		p{
 			margin: 0px;
@@ -42,13 +29,17 @@
 			font-weight: lighter;
 		}
 		button{
+			display: block;
+			margin: 0 auto;
+			font-family: "å¾®è½¯é›…é»‘";
 			padding-top: 10px;
 			padding-bottom: 10px;
 			margin-top: 10px;
 			border: none;
 			border-radius: 5px;
 			width: 120px;
-			background-color: #FFF;
+			background-color: #ec8515;
+			color: white;
 			font-size: 18px;
 			text-align: center;
 		}
@@ -58,14 +49,18 @@
 			outline-style: none;
 		}
 		button:focus{
+			background-color: #d67000;
 			border: none;
 			outline-style: none;
 		}
 		input {
 			width: 50%;
+			padding-top: 10px;
 			border: 0px;
+			font-family: "å¾®è½¯é›…é»‘",Arial,Helvetica,sans-serif;
 			font-size: 14px;
-			font-family: "Î¢ÈíÑÅºÚ";
+			line-height: 14px;
+			overflow:hidden;
 			background-color: #2D2D2D;
 			color: #FFF;
 			text-align: right;
@@ -76,14 +71,17 @@
 		}
 		.inputt{
 			border-bottom: 1px solid #575757; 
-			padding: 10px;
+			height: 36px;
+			font-family: "å¾®è½¯é›…é»‘";
 			font-size: 14px;
+			line-height: 36px;
 		}
 		#light{
 			width:10px;
 			height:10px;
 			border-radius: 5px;
-			background:black;
+			background:#2D2D2D;
+			margin-top: 10px;
 			margin-bottom: 10px;
 			position:relative;
 			margin-right: auto;
@@ -115,27 +113,27 @@
 		}
 		@keyframes myfirst
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:white; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-moz-keyframes myfirst /* Firefox */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:white; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-webkit-keyframes myfirst /* Safari and Chrome */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:white; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-o-keyframes myfirst /* Opera */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:white; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		.breath2
 		{			
@@ -149,27 +147,27 @@
 		}
 		@keyframes breathw
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:red; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-moz-keyframes breathw /* Firefox */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:red; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-webkit-keyframes breathw /* Safari and Chrome */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:red; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-o-keyframes breathw /* Opera */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:red; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}		
 		.breath1
 		{			
@@ -183,27 +181,27 @@
 		}
 		@keyframes breathr
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:green; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-moz-keyframes breathr /* Firefox */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:green; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-webkit-keyframes breathr /* Safari and Chrome */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:green; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 		@-o-keyframes breathr /* Opera */
 		{
-			0%   {background:black; }
+			0%   {background:#2D2D2D; }
 			50%  {background:green; }
-			100% {background:black; }
+			100% {background:#2D2D2D; }
 		}
 
 	</style>
@@ -212,36 +210,37 @@
 	
 
 	<form  id="myform" onsubmit="return validate_form(this)" action="" enctype="" method="post">
-		<div class="inputt">ĞÕÃû
-			<input onblur="check(this)" type="text" name="name" id="name" placeholder="ÇëÊäÈëĞÕÃû£¨±ØÌî£©">
+		<div class="inputt">å§“å
+			<input onblur="check(this)" type="text" name="name" id="name" placeholder="å§“åä¸ºå¿…å¡«">
 		</div>
-		<div class="inputt">µç»°
-			<input onblur="check(this)" type="text" name="phone" placeholder="ÇëÊäÈëµç»°£¨±ØÌî£©">
+		<div class="inputt">ç”µè¯
+			<input onblur="check(this)" type="text" name="phone" placeholder="ç”µè¯ä¸ºå¿…å¡«">
 		</div>
-		<div class="inputt">ÓÊÏä
-			<input onblur="check(this)" type="text" name="email" placeholder="ÇëÊäÈëÓÊÏä£¨±ØÌî£©">
+		<div class="inputt">é‚®ç®±
+			<input onblur="check(this)" type="text" name="email" placeholder="é‚®ç®±ä¸ºå¿…å¡«">
 		</div>
-		<div class="inputt">Ñ§Ğ£
-			<input onblur="check(this)" type="text" name="school" placeholder="ÇëÊäÈëÑ§Ğ££¨±ØÌî£©">
+		<div class="inputt">å­¦æ ¡
+			<input onblur="check(this)" type="text" name="school" placeholder="å­¦æ ¡ä¸ºå¿…å¡«">
 		</div>
-		<div class="inputt">±ÏÒµÄê·İ
-			<input onblur="check(this)" type="text" name="year" placeholder="ÇëÊäÈë±ÏÒµÄê·İ£¨2010~2016£©£¨±ØÌî£©">
+		<div class="inputt">æ¯•ä¸šå¹´ä»½
+			<input onblur="check(this)" type="text" name="year" placeholder="(2010~2016),å¿…å¡«">
 		</div>
-		<div class="inputt">×÷Æ·ÍøÅÌµØÖ·
-			<input type="text" name="work" placeholder="×÷Æ·ÍøÅÌµØÖ·">
+		<div class="inputt">ä½œå“ç½‘ç›˜åœ°å€
+			<input type="text" name="work" placeholder="ä½œå“ç½‘ç›˜åœ°å€">
 		</div>
-		<h4>ÇëÌîĞ´»ù±¾ĞÅÏ¢</h4>
+		<!-- <h4>è¯·å¡«å†™åŸºæœ¬ä¿¡æ¯</h4> -->
 		<div id="light" class="breath"></div>
 
 		<div id="warning"></div>
 	</form>
-	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" ontouchend="test()">Ìá½»</button>
+	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" onclick="test()">æäº¤</button>
 </body>
 <script>
+console.log(document.getElementsByTagName('meta')["Description"].content);
+	console.log(document.getElementsByTagName('meta')["Copyright"].content);
 	document.getElementById("name").focus();
 	document.onkeypress=function(){if (event.keyCode==13)blankc();}
 	var ins = document.getElementsByTagName("input");
-	console.log(ins[0].placeholder);
 	function blankc () {
 		var inputs = document.getElementsByTagName("input");
 		for (var i=0; i<inputs.length-1; i++) {
@@ -261,15 +260,15 @@
 		validate(obj);
 		switch (obj.name)
 		{
-			case "phone":
-			checkMobile(obj);
-			break;
-			case "email":
-			checkEmail(obj);
-			break;
-			case "year":
-			checkYear(obj);
-			break;
+			// case "phone":
+			// checkMobile(obj);
+			// break;
+			// case "email":
+			// checkEmail(obj);
+			// break;
+			// case "year":
+			// checkYear(obj);
+			// break;
 		}
 	}
 	function validate(obj)
@@ -292,7 +291,7 @@
 			flicker(1);
 			clearwar();
 		}else{ 
-			warning ("ÇëÊäÈëÕıÈ·µÄÊÖ»úºÅ",obj);
+			warning ("è¯·è¾“å…¥æ­£ç¡®çš„æ‰‹æœºå·",obj);
 			obj.value="";
 		} 
 	} 
@@ -304,7 +303,7 @@
 			flicker(1)
 			clearwar();
 		}else{
-			warning ("ÇëÊäÈëÕıÈ·µÄÓÊÏä",obj);
+			warning ("è¯·è¾“å…¥æ­£ç¡®çš„é‚®ç®±",obj);
 			obj.value="";
 		} 
 	}
@@ -315,7 +314,7 @@
 			flicker(1)
 			clearwar();
 		}else{ 
-			warning ("ÇëÊäÈëÕıÈ·µÄÄê·İ£¬2010~2016",obj);
+			warning ("è¯·è¾“å…¥æ­£ç¡®çš„å¹´ä»½ï¼Œ2010~2016",obj);
 			obj.value="";
 		} 
 	}
@@ -348,7 +347,7 @@
 	function test()
 	{
 		document.getElementById("myform").submit(); 
-		window.location.href = 'www.baidu.com';
+		window.location.href = 'success.html';
 	}
 </script>
 </html>
