--- a/linkedoffer/index.html
+++ b/linkedoffer/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="zh">
 <head>
-	<title>ÌîĞ´ĞÅÏ¢»ñÈ¡ÃÜ³×</title>
+	<title>å¡«å†™ä¿¡æ¯è·å–å¯†åŒ™</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<meta http-equiv="Content-Language" content="zh-cn">
-	<meta name="Description" content="Linkedoffer£¬Á¬½ÓÄãÉí±ßµÄHRÖÂÁ¦ÓÚÏòÇàÄêÌá¹©»¥ÁªÍøÖ°Òµ»ú»á£¬»ùÓÚÁ¬½ÓHRÓÊÏäµÄÉç½»»¯ÕĞÆ¸¡£">
+	<meta name="Description" content="Linkedofferï¼Œè¿æ¥ä½ èº«è¾¹çš„HRè‡´åŠ›äºå‘é’å¹´æä¾›äº’è”ç½‘èŒä¸šæœºä¼šï¼ŒåŸºäºè¿æ¥HRé‚®ç®±çš„ç¤¾äº¤åŒ–æ‹›è˜ã€‚">
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<meta name="robots" content="all">
 	<meta name="author" content="Parizus">
@@ -16,7 +16,7 @@
 		body{
 			background-color: #2D2D2D;
 			color: white;
-			/*font-family: "Î¢ÈíÑÅºÚ";*/
+			/*font-family: "å¾®è½¯é›…é»‘";*/
 		}
 		#myform{
 			border-top: 1px solid #575757;	
@@ -31,7 +31,7 @@
 		button{
 			display: block;
 			margin: 0 auto;
-			font-family: "Î¢ÈíÑÅºÚ";
+			font-family: "å¾®è½¯é›…é»‘";
 			padding-top: 10px;
 			padding-bottom: 10px;
 			margin-top: 10px;
@@ -57,7 +57,7 @@
 			width: 50%;
 			padding-top: 10px;
 			border: 0px;
-			font-family: "Î¢ÈíÑÅºÚ",Arial,Helvetica,sans-serif;
+			font-family: "å¾®è½¯é›…é»‘",Arial,Helvetica,sans-serif;
 			font-size: 14px;
 			line-height: 14px;
 			overflow:hidden;
@@ -72,7 +72,7 @@
 		.inputt{
 			border-bottom: 1px solid #575757; 
 			height: 36px;
-			font-family: "Î¢ÈíÑÅºÚ";
+			font-family: "å¾®è½¯é›…é»‘";
 			font-size: 14px;
 			line-height: 36px;
 		}
@@ -210,30 +210,30 @@
 	
 
 	<form  id="myform" onsubmit="return validate_form(this)" action="" enctype="" method="post">
-		<div class="inputt">ĞÕÃû
-			<input onblur="check(this)" type="text" name="name" id="name" placeholder="ĞÕÃûÎª±ØÌî">
+		<div class="inputt">å§“å
+			<input onblur="check(this)" type="text" name="name" id="name" placeholder="å§“åä¸ºå¿…å¡«">
 		</div>
-		<div class="inputt">µç»°
-			<input onblur="check(this)" type="text" name="phone" placeholder="µç»°Îª±ØÌî">
+		<div class="inputt">ç”µè¯
+			<input onblur="check(this)" type="text" name="phone" placeholder="ç”µè¯ä¸ºå¿…å¡«">
 		</div>
-		<div class="inputt">ÓÊÏä
-			<input onblur="check(this)" type="text" name="email" placeholder="ÓÊÏäÎª±ØÌî">
+		<div class="inputt">é‚®ç®±
+			<input onblur="check(this)" type="text" name="email" placeholder="é‚®ç®±ä¸ºå¿…å¡«">
 		</div>
-		<div class="inputt">Ñ§Ğ£
-			<input onblur="check(this)" type="text" name="school" placeholder="Ñ§Ğ£Îª±ØÌî">
+		<div class="inputt">å­¦æ ¡
+			<input onblur="check(this)" type="text" name="school" placeholder="å­¦æ ¡ä¸ºå¿…å¡«">
 		</div>
-		<div class="inputt">±ÏÒµÄê·İ
-			<input onblur="check(this)" type="text" name="year" placeholder="(2010~2016),±ØÌî">
+		<div class="inputt">æ¯•ä¸šå¹´ä»½
+			<input onblur="check(this)" type="text" name="year" placeholder="(2010~2016),å¿…å¡«">
 		</div>
-		<div class="inputt">×÷Æ·ÍøÅÌµØÖ·
-			<input type="text" name="work" placeholder="×÷Æ·ÍøÅÌµØÖ·">
+		<div class="inputt">ä½œå“ç½‘ç›˜åœ°å€
+			<input type="text" name="work" placeholder="ä½œå“ç½‘ç›˜åœ°å€">
 		</div>
-		<!-- <h4>ÇëÌîĞ´»ù±¾ĞÅÏ¢</h4> -->
+		<!-- <h4>è¯·å¡«å†™åŸºæœ¬ä¿¡æ¯</h4> -->
 		<div id="light" class="breath"></div>
 
 		<div id="warning"></div>
 	</form>
-	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" onclick="test()">Ìá½»</button>
+	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" onclick="test()">æäº¤</button>
 </body>
 <script>
 console.log(document.getElementsByTagName('meta')["Description"].content);
@@ -291,7 +291,7 @@ console.log(document.getElementsByTagName('meta')["Description"].content);
 			flicker(1);
 			clearwar();
 		}else{ 
-			warning ("ÇëÊäÈëÕıÈ·µÄÊÖ»úºÅ",obj);
+			warning ("è¯·è¾“å…¥æ­£ç¡®çš„æ‰‹æœºå·",obj);
 			obj.value="";
 		} 
 	} 
@@ -303,7 +303,7 @@ console.log(document.getElementsByTagName('meta')["Description"].content);
 			flicker(1)
 			clearwar();
 		}else{
-			warning ("ÇëÊäÈëÕıÈ·µÄÓÊÏä",obj);
+			warning ("è¯·è¾“å…¥æ­£ç¡®çš„é‚®ç®±",obj);
 			obj.value="";
 		} 
 	}
@@ -314,7 +314,7 @@ console.log(document.getElementsByTagName('meta')["Description"].content);
 			flicker(1)
 			clearwar();
 		}else{ 
-			warning ("ÇëÊäÈëÕıÈ·µÄÄê·İ£¬2010~2016",obj);
+			warning ("è¯·è¾“å…¥æ­£ç¡®çš„å¹´ä»½ï¼Œ2010~2016",obj);
 			obj.value="";
 		} 
 	}
