--- a/linkedoffer/submitpieces.html
+++ b/linkedoffer/submitpieces.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="zh">
 <head>
-	<title>Ìá½»ÄúµÄ×÷Æ·</title>
+	<title>æäº¤æ‚¨çš„ä½œå“</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<meta http-equiv="Content-Language" content="zh-cn">
-	<meta name="Description" content="Linkedoffer£¬Á¬½ÓÄãÉí±ßµÄHRÖÂÁ¦ÓÚÏòÇàÄêÌá¹©»¥ÁªÍøÖ°Òµ»ú»á£¬»ùÓÚÁ¬½ÓHRÓÊÏäµÄÉç½»»¯ÕĞÆ¸¡£">
+	<meta name="Description" content="Linkedofferï¼Œè¿æ¥ä½ èº«è¾¹çš„HRè‡´åŠ›äºå‘é’å¹´æä¾›äº’è”ç½‘èŒä¸šæœºä¼šï¼ŒåŸºäºè¿æ¥HRé‚®ç®±çš„ç¤¾äº¤åŒ–æ‹›è˜ã€‚">
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<meta name="robots" content="all">
 	<meta name="author" content="Parizus">
@@ -16,7 +16,7 @@
 		body{
 			background-color: #2D2D2D;
 			color: white;
-			/*font-family: "Î¢ÈíÑÅºÚ";*/
+			/*font-family: "å¾®è½¯é›…é»‘";*/
 		}
 		#myform{
 			border-top: 1px solid #575757;	
@@ -31,7 +31,7 @@
 		button{
 			display: block;
 			margin: 0 auto;
-			font-family: "Î¢ÈíÑÅºÚ";
+			font-family: "å¾®è½¯é›…é»‘";
 			padding-top: 10px;
 			padding-bottom: 10px;
 			margin-top: 10px;
@@ -58,7 +58,7 @@
 			width: 50%;
 			padding-top: 10px;
 			border: 0px;
-			font-family: "Î¢ÈíÑÅºÚ",Arial,Helvetica,sans-serif;
+			font-family: "å¾®è½¯é›…é»‘",Arial,Helvetica,sans-serif;
 			font-size: 14px;
 			line-height: 14px;
 			overflow:hidden;
@@ -73,7 +73,7 @@
 			padding-top: 10px;
 			padding-bottom: 10px;
 			border: 0px;
-			font-family: "Î¢ÈíÑÅºÚ",Arial,Helvetica,sans-serif;
+			font-family: "å¾®è½¯é›…é»‘",Arial,Helvetica,sans-serif;
 			font-size: 14px;
 			line-height:1.5;
 			overflow:hidden;
@@ -89,7 +89,7 @@
 		.inputt{
 			border-bottom: 1px solid #575757; 
 			height: 36px;
-			font-family: "Î¢ÈíÑÅºÚ";
+			font-family: "å¾®è½¯é›…é»‘";
 			font-size: 14px;
 			line-height: 36px;
 		}
@@ -97,7 +97,7 @@
 			margin: 0;
 			padding: 0;
 			font-size: 14px;
-			font-family: "Î¢ÈíÑÅºÚ";
+			font-family: "å¾®è½¯é›…é»‘";
 			text-align: center;
 			float: left;
 			width: 100%;
@@ -144,34 +144,34 @@
 	
 
 	<form  id="myform" onsubmit="return validate_form(this)" action="" enctype="" method="post">
-		<div class="inputt">ĞÕÃû
+		<div class="inputt">å§“å
 			<li type="text" name="name" id="name"></li>
 		</div>
-		<div class="inputt">µç»°
+		<div class="inputt">ç”µè¯
 			<li type="text" name="phone"></li>
 		</div>
-		<div class="inputt">ÓÊÏä
+		<div class="inputt">é‚®ç®±
 			<li type="text" name="email"></li>
 		</div>
-		<div class="inputt">Ñ§Ğ£
+		<div class="inputt">å­¦æ ¡
 			<li type="text" name="school"></li>
 		</div>
-		<div class="inputt">±ÏÒµÄê·İ
+		<div class="inputt">æ¯•ä¸šå¹´ä»½
 			<li type="text" name="year"></li>
 		</div>
 	</form>
 	<form id="pieces" action="">
-		<div id="pieces1" class="inputt" style="border:none;" >×÷Æ·Ò»
-			<textarea name="" id="" cols="30" rows="1" placeholder="²úÆ·¹ÙÍø»òdemoÁ´½Ó"></textarea>
-			<textarea name="" id="" cols="30" rows="6" placeholder="Ïà¹ØÃèÊö¼°ÄúËù¸ºÔğµÄ²¿·Ö£¨Àı£ºlinkedoffer»¥ÁªÍøĞ£Ô°´¹Ö±ÕĞÆ¸Æ½Ì¨£ºphp³ÌĞòÔ±£¬¸ºÔğ²úÆ·ºó¶Ë¿ª·¢¹¤×÷£©"></textarea>
+		<div id="pieces1" class="inputt" style="border:none;" >ä½œå“ä¸€
+			<textarea name="" id="" cols="30" rows="1" placeholder="äº§å“å®˜ç½‘æˆ–demoé“¾æ¥"></textarea>
+			<textarea name="" id="" cols="30" rows="6" placeholder="ç›¸å…³æè¿°åŠæ‚¨æ‰€è´Ÿè´£çš„éƒ¨åˆ†ï¼ˆä¾‹ï¼šlinkedofferäº’è”ç½‘æ ¡å›­å‚ç›´æ‹›è˜å¹³å°ï¼šphpç¨‹åºå‘˜ï¼Œè´Ÿè´£äº§å“åç«¯å¼€å‘å·¥ä½œï¼‰"></textarea>
 		</div>
-		<div id="pieces2" class="inputt" style="border:none;height:auto;display:none;" >×÷Æ·¶ş
-			<textarea name="" id="" cols="30" rows="1" placeholder="²úÆ·¹ÙÍø»òdemoÁ´½Ó"></textarea>
-			<textarea name="" id="" cols="30" rows="6" placeholder="Ïà¹ØÃèÊö¼°ÄúËù¸ºÔğµÄ²¿·Ö£¨Àı£ºlinkedoffer»¥ÁªÍøĞ£Ô°´¹Ö±ÕĞÆ¸Æ½Ì¨£ºphp³ÌĞòÔ±£¬¸ºÔğ²úÆ·ºó¶Ë¿ª·¢¹¤×÷£©"></textarea>
+		<div id="pieces2" class="inputt" style="border:none;height:auto;display:none;" >ä½œå“äºŒ
+			<textarea name="" id="" cols="30" rows="1" placeholder="äº§å“å®˜ç½‘æˆ–demoé“¾æ¥"></textarea>
+			<textarea name="" id="" cols="30" rows="6" placeholder="ç›¸å…³æè¿°åŠæ‚¨æ‰€è´Ÿè´£çš„éƒ¨åˆ†ï¼ˆä¾‹ï¼šlinkedofferäº’è”ç½‘æ ¡å›­å‚ç›´æ‹›è˜å¹³å°ï¼šphpç¨‹åºå‘˜ï¼Œè´Ÿè´£äº§å“åç«¯å¼€å‘å·¥ä½œï¼‰"></textarea>
 		</div>
-		<div id="pieces3" class="inputt" style="border:none;height:auto;display:none;" >×÷Æ·Èı
-			<textarea name="" id="" cols="30" rows="1" placeholder="²úÆ·¹ÙÍø»òdemoÁ´½Ó"></textarea>
-			<textarea name="" id="" cols="30" rows="6" placeholder="Ïà¹ØÃèÊö¼°ÄúËù¸ºÔğµÄ²¿·Ö£¨Àı£ºlinkedoffer»¥ÁªÍøĞ£Ô°´¹Ö±ÕĞÆ¸Æ½Ì¨£ºphp³ÌĞòÔ±£¬¸ºÔğ²úÆ·ºó¶Ë¿ª·¢¹¤×÷£©"></textarea>
+		<div id="pieces3" class="inputt" style="border:none;height:auto;display:none;" >ä½œå“ä¸‰
+			<textarea name="" id="" cols="30" rows="1" placeholder="äº§å“å®˜ç½‘æˆ–demoé“¾æ¥"></textarea>
+			<textarea name="" id="" cols="30" rows="6" placeholder="ç›¸å…³æè¿°åŠæ‚¨æ‰€è´Ÿè´£çš„éƒ¨åˆ†ï¼ˆä¾‹ï¼šlinkedofferäº’è”ç½‘æ ¡å›­å‚ç›´æ‹›è˜å¹³å°ï¼šphpç¨‹åºå‘˜ï¼Œè´Ÿè´£äº§å“åç«¯å¼€å‘å·¥ä½œï¼‰"></textarea>
 		</div>
 		<svg onclick="addnewform()" version="1.1" baseProfile="basic" width="70" height="20" x="0px" y="0px" viewBox="0 0 35 10"	xml:space="preserve">
 			<style type="text/css">
@@ -184,10 +184,10 @@
 				<line id="XMLID_67_" class="st0" x1="2.964" y1="5" x2="8.044" y2="5"/>
 				<line id="XMLID_66_" class="st0" x1="5.504" y1="2.46" x2="5.504" y2="7.54"/>
 			</g>
-			<text id="XMLID_121_" transform="matrix(1 0 0 1 11.6328 7.8319)" class="st1 st2 st3">ĞÂÔö</text>
+			<text id="XMLID_121_" transform="matrix(1 0 0 1 11.6328 7.8319)" class="st1 st2 st3">æ–°å¢</text>
 		</svg>
 	</form>
-	<button type="submit" id="btn" onclick="test()">Ìá½»</button>
+	<button type="submit" id="btn" onclick="test()">æäº¤</button>
 </body>
 <script>
 	console.log(document.getElementsByTagName('meta')["Description"].content);
