--- a/linkedoffer2/index.html
+++ b/linkedoffer2/index.html
@@ -19,7 +19,6 @@
 			/*font-family: "微软雅黑";*/
 		}
 		#myform{
-			border-top: 1px solid #575757; 
 			margin-top: 20px;
 		}
 		p{
@@ -54,24 +53,32 @@
 			outline-style: none;
 		}
 		.inputt{
-			border-radius: 5px;
-			border-bottom: 1px solid #575757; 
-			height: 36px;
+			margin-top: 8px;
+			border-radius: 8px;
+			/*border: 1px solid #575757; */
+			height: 40px;
+			padding-left: 8px;
+			/*padding-right: 8px;*/
+			background-color: #3e3a39;
 			font-family: "微软雅黑";
 			font-size: 14px;
-			line-height: 36px;
+			line-height: 40px;
 		}
 		input {
-			width: 50%;
+			width: 75%;
+			height: 20px;
 			padding-top: 10px;
+			padding-bottom: 10px;
+			padding-left: 5px;
 			border: 0px;
+			border-radius: 0px 8px 8px 0px;
 			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
 			font-size: 14px;
-			line-height: 14px;
+			line-height: 20px;
 			overflow:hidden;
-			background-color: #2D2D2D;
-			color: #FFF;
-			text-align: right;
+			background-color: #fff;
+			color: #3e3a39;
+			/*text-align: right;*/
 			float: right;
 		}
 		input:focus{
@@ -210,7 +217,7 @@
 <body>
 	
 
-	<form  id="myform" onsubmit="return validate_form(this)" action="" enctype="" method="post">
+	<form  id="myform" onsubmit="" action="" enctype="" method="post">
 		<div class="inputt">姓名
 			<input onblur="check(this)" type="text" name="name" id="name" placeholder="姓名为必填">
 		</div>
@@ -226,7 +233,7 @@
 		<div class="inputt">毕业年份
 			<input onblur="check(this)" type="text" name="year" placeholder="(2010~2016),必填">
 		</div>
-		<div class="inputt">作品网盘地址
+		<div class="inputt">作品网盘
 			<input type="text" name="work" placeholder="作品网盘地址">
 		</div>
 		<!-- <h4>请填写基本信息</h4> -->
