--- a/linkedoffer2/index.html
+++ b/linkedoffer2/index.html
@@ -99,6 +99,7 @@
 		#warning{
 			margin-top: 10px;
 			margin-bottom: 10px;
+			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
 		}
 		.breathshut{
 			animation:myfirst 4s ease-in-out 0s alternate;
