--- a/linkedoffer2/index.html
+++ b/linkedoffer2/index.html
@@ -101,6 +101,11 @@
 			margin-bottom: 10px;
 			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
 		}
+		#warningc{
+			margin-top: 10px;
+			margin-bottom: 10px;
+			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
+		}
 		.breathshut{
 			animation:myfirst 4s ease-in-out 0s alternate;
 			/* Firefox: */
