--- a/linkedoffer2/submitpieces.html
+++ b/linkedoffer2/submitpieces.html
@@ -94,7 +94,7 @@
 			margin-bottom: 10px;
 			padding-top: 10px;
 			padding-bottom: 10px;
-			padding-left: 8px;
+			/*padding-left: 8px;*/
 			border: 0px;
 			border-radius: 8px;
 			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
