--- a/linkedoffer2/index.html
+++ b/linkedoffer2/index.html
@@ -55,10 +55,8 @@
 		.inputt{
 			margin-top: 8px;
 			border-radius: 8px;
-			/*border: 1px solid #575757; */
 			height: 40px;
 			padding-left: 8px;
-			/*padding-right: 8px;*/
 			background-color: #3e3a39;
 			font-family: "微软雅黑";
 			font-size: 14px;
@@ -69,7 +67,6 @@
 			height: 20px;
 			padding-top: 10px;
 			padding-bottom: 10px;
-			padding-left: 5px;
 			border: 0px;
 			border-radius: 0px 8px 8px 0px;
 			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
@@ -78,7 +75,6 @@
 			overflow:hidden;
 			background-color: #fff;
 			color: #3e3a39;
-			/*text-align: right;*/
 			float: right;
 		}
 		input:focus{
@@ -239,15 +235,12 @@
 		<div class="inputt">毕业年份
 			<input onblur="check(this)" type="text" name="year" placeholder="(2010~2016),必填">
 		</div>
-		<div class="inputt">作品网盘
-			<input type="text" name="work" placeholder="作品网盘地址">
-		</div>
 		<!-- <h4>请填写基本信息</h4> -->
 		<div id="light" class="breath"></div>
 
 		<div id="warning"></div>
 	</form>
-	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" onclick="test()">提交</button>
+	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" onclick="test()">下一步</button>
 </body>
 <script>
 console.log(document.getElementsByTagName('meta')["Description"].content);
