--- a/linkedoffer/index.html
+++ b/linkedoffer/index.html
@@ -273,15 +273,15 @@ console.log(document.getElementsByTagName('meta')["Description"].content);
 		validate(obj);
 		switch (obj.name)
 		{
-			// case "phone":
-			// checkMobile(obj);
-			// break;
-			// case "email":
-			// checkEmail(obj);
-			// break;
-			// case "year":
-			// checkYear(obj);
-			// break;
+			case "phone":
+			checkMobile(obj);
+			break;
+			case "email":
+			checkEmail(obj);
+			break;
+			case "year":
+			checkYear(obj);
+			break;
 		}
 	}
 	function validate(obj)
