--- a/linkedoffer2/success.html
+++ b/linkedoffer2/success.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>申请成功</title>
@@ -13,22 +13,30 @@
 	<meta http-equiv="imagetoolbar" content="false">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 	<style>
+		body{
+			background-color: #2D2D2D;
+			color: #DCDDDD;
+			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
+		}
+		h4,h5{
+			font-family: "微软雅黑";
+			font-weight: normal;
+			text-align: center;
+			font-size: 14px;
+			margin-top: 10px;
+			margin-bottom: 10px;
+		}
+		h4{
+			margin-top: 100px;
+			font-size: 18px;
+		}
 	</style>
 </head>
-<body onload="lod()">
-	<img id="logo" src="logo.png">
-	<!-- <div id="showTime"></div> -->
+<body>
+	<h4>&nbsp;&nbsp;申请成功！</h4>
+	<h5>请打开邮箱查收登录密钥<br />立即参与互联网校园招聘</h5>
+	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+		<a href="qanda.html"><img src="question.png"></a>
+	</div>
 </body>
-<script>
-	var cnt = 2;
-	function lod(){
-		if(cnt < 0){
-			window.location.href = "startpredict.html";
-		}else{
-			// document.getElementById("showTime").innerHTML = "页面<font color=red>" + cnt + "</font>秒后跳转";
-			cnt--;
-		}
-		setTimeout("lod()",1000);
-	}
-</script>
 </html>
